# wd2tantivy

./: README.md  pyproject.toml
wd2tantivy/: generate.py
